terraform/vpc2/gateway.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.test.id

  tags = {
    Name = "rishi-gw"
  }
}
